CSS/summer.css
@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,300,400,700);
        
html * {
     font-family: 'Open Sans';
}

/*******************************************/
/************** Begin Nav Bar **************/
/*******************************************/

.navbar-wrapper {
	position: absolute;
	width: 100%;
}

/* Fixes rounded corners issue in Bootstrap navbar */
.navbar-inverse {
  border-radius: 0;
}

#rbgnavbar a:hover, a, li, .dropdown-menu li:hover {
    color: #000000;
}

.dropdown-menu li:hover {
	background-color: #F2EDE4;
	color: #000000;
}

/* Makes dropdown menu headers change color when selected or clicked, as well as mobile menu icon (Hamburger Menu icon) change to same color */
	.dropdown-toggle:active, 					/*  */
	.open .dropdown-toggle, 					/*  */
	.dropdown-toggle:hover, 					/*  */
	.navbar-inverse .navbar-toggle:active, 		/* menu icon background color when button is active */
	.navbar-inverse .navbar-toggle:focus, 		/* menu icon background color when it is clicked into */
	.navbar-inverse .navbar-toggle:hover 		/* menu icon background color when hovered over */
	{
	background-color: #196143 !important; /* Overwrites Bootstrap's !important */
}

/* Makes headers of the dropdown menus white and bold */
.navbar-inverse .nav li .dropdown-toggle, .navbar-inverse .nav li .dropdown-toggle:hover  {
    color: #FFFFFF !important; /* Overwrites Bootstrap's !important */
}

.dropdown-menu li {
	background-color: #FFFFFF;
}

.dropdown-menu li:hover {
	background-color: #F2EDE4;
}

.dropdown-menu li > a:hover {
	text-decoration: none;
}

.navbar-inverse a:hover {
	color: #FFFFFF;
}

/* Changes the color of link text <a> after navbar has collapsed for small screen or mobile mode */
.navbar-inverse .navbar-nav .open .dropdown-menu > li > a, .navbar-inverse .navbar-nav .open .dropdown-menu > li > a:visited {
	color: #000000;
}

.dropdown-menu li, .dropdown-menu a {
	text-align: center;
	color: #000000;
}

.dropdown {
	font-size: 12px;
	padding: 0;
	font-weight: bold;
}

.dropdown ul {
	padding-top: 0px;
	padding-bottom: 0px;
	font-size: 10px;
	font-weight: bold;
}

/* Border thickness and color between dropdown menu li, padding */
.dropdown-menu li {
	border-top: 2px double #D3D3D3;
	padding-top: 5px;
	padding-bottom: 5px;
}

/* Background color of li in navbar when hovered over */
.dropdown-menu li > a:hover, .dropdown-menu li > a:focus, .dropdown-submenu:hover > a, .dropdown-menu li:hover {
	background-color: #F2EDE4;
}

/* Makes dropdown-menu li links bold*/
.dropdown-menu li > a, .dropdown-menu li > a:visited {
	font-weight: bold;
}

#navbarbg {
	background-color: #00502F;
	width: 100%;
}

#rbgnavbar {
	max-width: 1280px;
	margin-left:auto;
	margin-right:auto;
	background-color:#00502F;
}

#logo {
	padding-top: 13px;
}

.logo {
	width:202px;
	height: 23px;
	background: url('../images/sprites.png') -171px -301px ;
}

.logo:hover {
	opacity: .9;
}

.nav-button {
	clear: none;
	margin-left: auto;
	margin-right: auto;
	float: right;
}

.nav-button img:hover {
	opacity: .9;
}

/* Adjusts width of dropdown menu */
.dropdown-menu a, .dropdown-menu li {
  min-width: 150px;
}

/* Adjusts center alignment of dropdown menu under main categories when navbar has not collapsed */
@media only screen and (min-width : 769px) {
	
	.dropdown-menu {
	    left: 50% !important;
	    margin-left: -78px;
	}
}

/* For small devices, and after navbar collapses */ 
@media only screen and (max-width : 768px) {
  
	.dropdown-menu li, .dropdown-menu li a, .dropdown-menu ul {
		text-align: center;
		color: #000000;
		list-style: none;
		padding-left: 0 !important;
	}
	
}

@media only screen and (max-width : 950px) {
	.jssorb21 {
		display: none; /* Makes selecion dots on slideshow disappear at this width */
		height: 0;
	}
}

/* Hides Give, Join, and Volunteer Buttons within certain widths */
@media (min-width: 769px) and (max-width: 1200px) {
	.nav-button {
		display: none;
	}
	
}

/* Hides Search Bar within certain widths */
@media (min-width: 769px) and (max-width: 1000px) {
	.rbgsearch {
		display: none;
	}
}

/************************/
/* Begin Search Bar CSS */
/************************/

form {
	width: 100px;
}

.search { 
	padding:3px 15px 3px 22px;
	margin:3px; 
	background: url('../images/search.png') no-repeat 8px 3px;
	background-size: 12px 12px;
	background-repeat: no-repeat;
	width: 135px;
	
}

.rounded { 
	border-radius:15px;
}

input[type=text]{
	color: #000000;
	font-size: 9px;
}

.rbgsearch { 
	padding-top: 12px;
	float: left;
		/* div containing search form 
	width:95%;
	height: 50px;
	padding: 40px 25px;
		*/
}

.rbgsearch input[type=text]{
	border: 1px solid #acb1b7;
	background-color :#FFFFFF;
}

/************************/
/** End Search Bar CSS **/
/************************/

/* Makes space between navbar and slideshow disappear after collapse - required for relative positioning so menu makes divs below the navbar move down when open */ 
 @media all and (max-width: 950px ){
	 
	 .navbar-wrapper {
	 	clear:right;
	 	position: relative;
	 	padding-bottom: 0px;
	 }
                       
	 #slider-wrapper  {
	 	margin-top: -20px;
	    position: relative;
	    clear: right;
	 }

}

/*****************************************/
/************** End Nav Bar **************/
/*****************************************/

/************************/
/** Begin RBG Info Div **/
/************************/

#rbg-info-wrapper1, #rbg-info-wrapper2 {
	clear: both;
}

#gardenHours, #gardenStatus {
	margin-top: 2px;
}

#rbginfobg {
	background-color: rgba(0,0,0,0.5); /* IMPORTANT: Use ONLY rbga here instead of rbg or hex so that opacity of the background color is not inherited */
	width: 100%;
	height: 160px;
	position: absolute;
	bottom: 0;
}

#rbginfobg2 {
	position: relative;
}

#rbginfo, #rbginfo2 {
	max-width: 1280px;
	margin: 0 auto 0 auto;
	color: #FFFFFF;
}

#rbghours {
	text-align: center;
	font-size: 11px;
}
/* ... */

